@@ -114,6 +114,7 @@ Trunk
 		* UPnP add/delete port mappings are now done in every device
 		  found, instead of only the first one.
 		* Creation of --enable-upnp/--disable-upnp configure flag.
+		* Update of wxWidgets-2.6.3 deprecated code to version 2.8.2.
 
 	spiralvoice:
 		* Patch to enable MLDonkey os_info support.
